# zk-IVF-PQ

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  tmp_script.sh
bench/: __init__.py  acc_bench.py  bench_suite.py  bio_metric.py  circuit_based.py  commitment_eval.py  gate_count.py  ivf_pq.py  ms_macro_eval.py  ms_macro_result.py  optimal_config.py  optimal_mem_config.py  optimal_mem_gate_only.py  set_based.py  standalone_commitment.py
bench_free_bench/: README.md  brute_force.py  circuit_ivf_pq.py  halo2_brute_force.py  ivf_flat.py  ivf_flat_verify.py  ivf_pq.py  ivf_pq_verify.py  merkle_commit.py  merkle_commit_plain.py  pq_flat.py  pq_flat_acc.py  pq_flat_accel.py  pq_flat_com.py  pq_flat_verify.py  set_based_gate.py  sort_brute_force.py
ivf_pq/: __init__.py  baseline.py  layout.py  main.py  merkle_zk.py  pipeline.py  rebalance.py  standard.py  zk.py
scripts/: acc_bench.sh  bench_suite.sh  broad_test.sh  default_bench.sh  faiss_opq_bench.sh  gate_count.sh  ivf-flat.sh  knn_test.sh  merkle_scale1m.sh  ms_macro_eval.sh  optimal_config.sh  optimal_mem_config.sh  optimal_mem_gate_only.sh  optimal_mem_gate_only_ann_ir.sh  pq_flats.sh  scale1g.sh  scale1m.sh
src/: _common_gadgets.rs  _nn_gadgets.rs  hash_gadgets.rs  kmeans_gadgets.rs  lib.rs  nn_gadgets.rs  prelude.rs  prove.rs
tests/: acc_bench.py  baseline.py  bio_metric.py  data_load.py  faiss_opq_bench.py  merkle_zk.py  msmacro_broad_test.py  msmacro_emb.py  msmacro_knn.py  nn_gadgets_prove.py  pipeline.py  rust_part.py  sort_data_prove.py  standard.py  tmp.py  upperbound.py  zk.py  zk_ver.py
(+54 files in other folders)
