[package]
name = "zk-IVF-PQ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zk_IVF_PQ"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
halo2_proofs = "0.3.0"
plonky2 = "1.1.0"
psutil = "3.2.2"
# starky = "1.1.0"
# itertools = "0.12.0"
# jemallocator = "0.5.0"
pyo3 = "0.25.0"
rand = "0.8"

# fri evaluation
log = "0.4.17"
rayon = "1.6.1"
